--- a/index.Rmd
+++ b/index.Rmd
@@ -28,11 +28,11 @@ Methodologically, much of my work focuses on the integration of social and envir
 <br>
 
 ## Education
-**PhD Geography** | University of Arizona, USA
+**PhD Geography** | University of Arizona, USA | 2018 - Present
 
-**MSc Environmental Science & Technology** | Lancaster University, UK
+**MSc Environmental Science & Technology** | Lancaster University, UK | 2017
 
-**BA Geography** | Lancaster University, UK
+**BA Geography** | Lancaster University, UK | 2013 - 2016
 
 <br>
 
