--- a/index.Rmd
+++ b/index.Rmd
@@ -17,13 +17,13 @@ output:
  
 ## About Me
 
-👋 Hello! I am a Geography PhD candidate in the [School of Geography, Development & Environment][sgde] at the University of Arizona under the advisement of [Professor Tom Evans][tom].
+👋 Hello! I am a Geography PhD candidate in the [School of Geography, Development & Environment][sgde]{target="_blank"} at the University of Arizona under the advisement of [Professor Tom Evans][tom]{target="_blank"}.
 
 My current research investigates the dynamics of human-environment relationships between agriculture, urban growth and food security in Africa. I am primarily interested in rural-urban linkages between agricultural production and urban food security.
 
 Methodologically, my work is interdisciplinary in nature. I mainly focus on the integration of social and environmental data using GIS and spatial analysis alongside econometric and statistical modelling. Much of the data I use comes from large-scale household surveys in rural and urban settings across Sub-Saharan Africa. I work to couple these household level data with environmental and socio-economic data to examine and understand the spatial dynamics of food systems and food (in)security across southern Africa.
 
-For more information about my research, interests or potential collaboration, please get in touch!
+For more information about my research, interests or potential collaboration, please get in touch.
 
 <br>
 
