--- a/index.Rmd
+++ b/index.Rmd
@@ -17,7 +17,7 @@ output:
  
 ## About Me
 
-👋 Hello! I am a Geography PhD candidate in the [School of Geography, Development & Environment][sgde]{target="_blank"} at the University of Arizona under the advisement of [Professor Tom Evans][tom]{target="_blank"}.
+👋 Hello! I am a Geography PhD candidate in the [School of Geography, Development & Environment][sgde] at the University of Arizona under the advisement of [Professor Tom Evans][tom].
 
 My current research investigates the dynamics of human-environment relationships between agriculture, urban growth and food security in Africa. I am primarily interested in rural-urban linkages between agricultural production and urban food security.
 
