--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,7 @@
 ---
-title: "Andrew Zimmer - University of Arizona"
+title: "Andrew Zimmer"
 description: "Andrew Zimmer - PhD Candidate - Personal Website"
+org_name: "University of Arizona"
 site_type: Person
 image: "profile.jpg"
 links:
