--- a/index.Rmd
+++ b/index.Rmd
@@ -33,7 +33,7 @@ For more information about my research, interests or potential collaboration, pl
 ## Education
 **PhD Geography** | University of Arizona, USA | 2018 - Present
 
-**MSc Environmental Science & Technology** | Lancaster University, UK | 2017
+**MSc Environmental Science & Technology** | Lancaster University, UK | 2016 - 2017
 
 **BA Geography** | Lancaster University, UK | 2013 - 2016
 
