--- a/index.Rmd
+++ b/index.Rmd
@@ -11,8 +11,8 @@ links:
     url: "https://scholar.google.com/citations?user=35RDM5kAAAAJ&hl=en/"
   - label: Email
     url: "mailto:azimmer@email.arizona.edu"
-  - label: Twitter
-    url: "https://twitter.com/ZimmerMaps/"
+ # - label: Twitter
+ #  url: "https://twitter.com/ZimmerMaps/"
 output:
   postcards::solana
 ---
@@ -33,9 +33,10 @@ For more information about my research, interests or potential collaboration, pl
 ## Education
 **PhD Geography** | University of Arizona, USA | 2018 - Present
 
-**MSc Environmental Science & Technology** | Lancaster University, UK | 2016 - 2017
+**MSc Environmental Science & Technology** | Lancaster University, UK | 2017
 
-**BA Geography** | Lancaster University, UK | 2013 - 2016
+**BA Geography** | Lancaster University, UK | 2013 - 2016           
+Foreign Study at Oregon State University, 2014-2015
 
 <br>
 
