--- a/index.Rmd
+++ b/index.Rmd
@@ -11,9 +11,10 @@ links:
     url: "https://scholar.google.com/citations?user=35RDM5kAAAAJ&hl=en/"
   - label: Email
     url: "mailto:azimmer@email.arizona.edu"
-  - label: Research
+  - label: Projects
     url: "research.html"
-
+#  - label: Teaching
+#     url: "teaching.html"
  # - label: Twitter
  #  url: "https://twitter.com/ZimmerMaps/"
 output:
