--- a/index.Rmd
+++ b/index.Rmd
@@ -20,7 +20,7 @@ links:
 output:
   postcards::solana
 ---
- 
+
 ## About Me
 
 👋 Hello! I am a Geography PhD candidate in the [School of Geography, Development & Environment][sgde] at the University of Arizona.
@@ -45,28 +45,33 @@ Foreign Study at Oregon State University, 2014-2015
 
 ## Publications
 
+### 2022
+
+Hannah, C, Davies, J, Green, R, **Zimmer, A**, Anderson, P, Battersby, J, Baylis, K, Joshi, N, Evans, T (2022). Persistence of open-air markets in the food systems of Africa's secondary cities. *Cities*. [[Download]](./Publications/hannah_2022_c.pdf){target="_blank"}
+
+
 ### 2021
 
-Guido, Z, Lopus, S, Waldman, K, Hannah, C, **Zimmer, A**, Krell, N, Knudson, C, Estes, L, Caylor, K, Evans, T (2021). **Perceived links between climate change and weather forecast accuracy: new barriers to tools for agricultural decision-making**. *Climatic Change*. [[Download]](./Publications/guido_2021_cc.pdf){target="_blank"}
+Guido, Z, Lopus, S, Waldman, K, Hannah, C, **Zimmer, A**, Krell, N, Knudson, C, Estes, L, Caylor, K, Evans, T (2021). Perceived links between climate change and weather forecast accuracy: new barriers to tools for agricultural decision-making. *Climatic Change*. [[Download]](./Publications/guido_2021_cc.pdf){target="_blank"}
 
 
-Davies, J, Hannah, C, Guido, Z, **Zimmer, A**, McCann, L, Battersby, J, Evans, T (2021). **Barriers to urban agriculture in Sub-Saharan Africa**. *Food Policy*. [[Download]](./Publications/davies_2021_fp.pdf){target="_blank"}
+Davies, J, Hannah, C, Guido, Z, **Zimmer, A**, McCann, L, Battersby, J, Evans, T (2021). Barriers to urban agriculture in Sub-Saharan Africa. *Food Policy*. [[Download]](./Publications/davies_2021_fp.pdf){target="_blank"}
 
 
-Mack, E, Bunting, E, Herndon, J, Marcantonio, R, Ross, A, **Zimmer, A** (2021). **Conflict and its relationship to climate variability in Sub-Saharan Africa**. *Science of The Total Environment*. [[Download]](./Publications/mack_2021_stoten.pdf){target="_blank"}
+Mack, E, Bunting, E, Herndon, J, Marcantonio, R, Ross, A, **Zimmer, A** (2021). Conflict and its relationship to climate variability in Sub-Saharan Africa. *Science of The Total Environment*. [[Download]](./Publications/mack_2021_stoten.pdf){target="_blank"}
 
 
-Pearson, A, Mack, E, Ross, A, Marcantonio, R, **Zimmer, A**, Bunting, E, Smith, A, Miller, J, Evans, T (2021). **Interpersonal Conflict over Water Is Associated With Household Demographiics, Domains of Water Insecurity, and Regional Conflict: Evidence from Nine Sites across Eight Sub-Saharan African Countries**. *Water*. [[Download]](./Publications/pearson_2021_water.pdf){target="_blank"}
+Pearson, A, Mack, E, Ross, A, Marcantonio, R, **Zimmer, A**, Bunting, E, Smith, A, Miller, J, Evans, T (2021). Interpersonal Conflict over Water Is Associated With Household Demographiics, Domains of Water Insecurity, and Regional Conflict: Evidence from Nine Sites across Eight Sub-Saharan African Countries. *Water*. [[Download]](./Publications/pearson_2021_water.pdf){target="_blank"}
 
 
-Hannah, C, Giroux, S, Krell, S, Lopus, S, McCann, L, **Zimmer, A**, Caylor, K, Evans, T (2021). **Has the vision of a gender quota rule been realized for community-based water management committees in Kenya?**. *World Development*. [[Download]](./Publications/hannah_2021_wd.pdf)
+Hannah, C, Giroux, S, Krell, S, Lopus, S, McCann, L, **Zimmer, A**, Caylor, K, Evans, T (2021). Has the vision of a gender quota rule been realized for community-based water management committees in Kenya?. *World Development*. [[Download]](./Publications/hannah_2021_wd.pdf)
 
 ### 2020
 
-**Zimmer, A**, Guido, Z, Tuholske, C, Pakalniskis, A, Lopus, S, Caylor, K, Evans, T (2020). **Dynamics of population growth in secondary cities across southern Africa**. *Landscape Ecology*. [[Download]](./Publications/zimmer_2020_le.pdf){target="_blank"}
+**Zimmer, A**, Guido, Z, Tuholske, C, Pakalniskis, A, Lopus, S, Caylor, K, Evans, T (2020). Dynamics of population growth in secondary cities across southern Africa. *Landscape Ecology*. [[Download]](./Publications/zimmer_2020_le.pdf){target="_blank"}
 
 
-Guido, Z, **Zimmer, A**, Lopus, S, Hanah, C, Gower, D, Waldman, K, Krell, N, Sheffield, J, Caylor, K, Evans, T (2020). **Farmer forecasts: Impacts of seasonal rainfall expectations on agricultural decision-making in Sub-Saharan Africa**. *Climate Risk Management*. [[Download]](./Publications/guido_2020_crm.pdf){target="_blank"}
+Guido, Z, **Zimmer, A**, Lopus, S, Hanah, C, Gower, D, Waldman, K, Krell, N, Sheffield, J, Caylor, K, Evans, T (2020). Farmer forecasts: Impacts of seasonal rainfall expectations on agricultural decision-making in Sub-Saharan Africa. *Climate Risk Management*. [[Download]](./Publications/guido_2020_crm.pdf){target="_blank"}
 
 [tom]:http://www.tomgeog.org/
 [sgde]:https://geography.arizona.edu
