--- a/index.Rmd
+++ b/index.Rmd
@@ -48,6 +48,8 @@ Foreign Study at Oregon State University, 2014-2015
 
 ### 2022
 
+Davies, J, Blekking, J, Hannah, C, **Zimmer, A**, Joshi, N, Anderson, P, Chilenga, A, Evans, T (2022). Governance of traditional markets and rural-urban food systems in sub-Saharan Africa. *Habitat International*. [[Download]](./Publications/davies_2022_hi.pdf){target="_blank"}
+
 Hannah, C, Davies, J, Green, R, **Zimmer, A**, Anderson, P, Battersby, J, Baylis, K, Joshi, N, Evans, T (2022). Persistence of open-air markets in the food systems of Africa's secondary cities. *Cities*. [[Download]](./Publications/hannah_2022_c.pdf){target="_blank"}
 
 
