--- a/publications.Rmd
+++ b/publications.Rmd
@@ -9,6 +9,10 @@ links:
 output:
   postcards::solana
 ---
+### 2023
+
+Ross, A, Marcantonio, R, Miller-Graff, L, Pearson, A, Bunting, E, **Zimmer, A**. In Press. Does water insecurity mediate the relationship between climate variability and intimate partner violence in sub-Saharan Africa? *Climate and Development*
+
 ### 2022
 
 Mack, EA, Marcantonio, RA, Bunting, E, Ross, A, **Zimmer, A**, Zulu, LC, Gómez Fernández, EL, Herndon, J, Henebry, GM (2022). A Systematic Literature Review of Quantitative Studies Assessing the Relatiosnhip between Water and Conflict on the African Continent. *Sustainability*. [[Download]](./Publications/mack_2022_sustainability.pdf){target="_blank"}
@@ -24,21 +28,16 @@ Hannah, C, Davies, J, Green, R, **Zimmer, A**, Anderson, P, Battersby, J, Baylis
 
 Guido, Z, Lopus, S, Waldman, K, Hannah, C, **Zimmer, A**, Krell, N, Knudson, C, Estes, L, Caylor, K, Evans, T (2021). Perceived links between climate change and weather forecast accuracy: new barriers to tools for agricultural decision-making. *Climatic Change*. [[Download]](./Publications/guido_2021_cc.pdf){target="_blank"}
 
-
 Davies, J, Hannah, C, Guido, Z, **Zimmer, A**, McCann, L, Battersby, J, Evans, T (2021). Barriers to urban agriculture in Sub-Saharan Africa. *Food Policy*. [[Download]](./Publications/davies_2021_fp.pdf){target="_blank"}
-
 
 Mack, E, Bunting, E, Herndon, J, Marcantonio, R, Ross, A, **Zimmer, A** (2021). Conflict and its relationship to climate variability in Sub-Saharan Africa. *Science of The Total Environment*. [[Download]](./Publications/mack_2021_stoten.pdf){target="_blank"}
 
-
 Pearson, A, Mack, E, Ross, A, Marcantonio, R, **Zimmer, A**, Bunting, E, Smith, A, Miller, J, Evans, T (2021). Interpersonal Conflict over Water Is Associated With Household Demographiics, Domains of Water Insecurity, and Regional Conflict: Evidence from Nine Sites across Eight Sub-Saharan African Countries. *Water*. [[Download]](./Publications/pearson_2021_water.pdf){target="_blank"}
-
 
 Hannah, C, Giroux, S, Krell, S, Lopus, S, McCann, L, **Zimmer, A**, Caylor, K, Evans, T (2021). Has the vision of a gender quota rule been realized for community-based water management committees in Kenya?. *World Development*. [[Download]](./Publications/hannah_2021_wd.pdf){target="_blank"}
 
 ### 2020
 
 **Zimmer, A**, Guido, Z, Tuholske, C, Pakalniskis, A, Lopus, S, Caylor, K, Evans, T (2020). Dynamics of population growth in secondary cities across southern Africa. *Landscape Ecology*. [[Download]](./Publications/zimmer_2020_le.pdf){target="_blank"}
-
 
 Guido, Z, **Zimmer, A**, Lopus, S, Hannah, C, Gower, D, Waldman, K, Krell, N, Sheffield, J, Caylor, K, Evans, T (2020). Farmer forecasts: Impacts of seasonal rainfall expectations on agricultural decision-making in Sub-Saharan Africa. *Climate Risk Management*. [[Download]](./Publications/guido_2020_crm.pdf){target="_blank"}
