--- a/index.Rmd
+++ b/index.Rmd
@@ -24,7 +24,7 @@ output:
 ---
 
 ## About Me
-I am a postdoctoral researcher in the [Department of Earth Sciences][msu_des] at Montana State University. My research investigates the dynamics of human-environment relationships between climate, urbanization and demographic change, and food security. 
+I am a postdoctoral researcher in the [Department of Earth Sciences][msu_des] at Montana State University. I am a human-environment geographer whose work focuses on the interactions between climate, urbanization and food security. 
 <br>  
 Methodologically, my work in interdisciplinary in nature. I mainly focus on the integration of social and environmental data using GIS and spatial analysis alongside econometric and statistical modelling. Much of the data I use is derived from satellites, where I integrate them with large-scale household surveys in both rural and urban settings. 
 <br>
