--- a/research.Rmd
+++ b/research.Rmd
@@ -48,7 +48,7 @@ Urban agriculture in Choma, Zambia
 
 ## Recent Research
 
-<font size="4"> **Research on COVID-19 Interventions and Impacts (ReCON) (2020-P)**</font> 
+<font size="4"> **Research on COVID-19 Interventions and Impacts (ReCON) (2020-2022)**</font> 
 <br>
 
 The COVID-19 pandemic has had a wide range of societal impacts. Along with an interdisciplinary team of researchers, I am working on understanding how governments have responded to mitigate the spread of COVID-19 through policies that seek to modify behavior and limit person-to-person transmission. We are also investigating how household food security has changes as a result of economic and other hardship caused by the pandemic. [More information][recon]
@@ -60,7 +60,7 @@ Non-Pharmaceutical Intervention Coding Progression (Nov 2021)
 </center>
 <br>
 <br>
-<font size="4"> **A socio-environmental synthesis of the linkages between water scarcity induced conflict and land use/land cover change in Africa to enhance multi-scalar decision making (2019-P)**</font> 
+<font size="4"> **A socio-environmental synthesis of the linkages between water scarcity induced conflict and land use/land cover change in Africa to enhance multi-scalar decision making (2019-2020)**</font> 
 <br>
 
 I am a member of a team of researchers investigating the relationships between climate change and conflict across Africa, funded through the Socio-Environmental Synthesis Center. This interdisciplinary team examine where, when and how conflicts arise over water. We analyze conflict events, environmental change, society and institutions to investigate the spate-temporal dynamics of water scarcity and how they are linked with conflict.
